--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,5 +59,6 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
