--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,6 +64,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
-
+    // implementation "com.google.firebase:firebase-analytics-ktx:17.4.4"
 }
 apply plugin: 'com.google.gms.google-services'
