--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,15 @@
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
+# Add the Firebase pod for Google Analytics
+pod 'Firebase/Analytics'
+
+# Add the pods for any other Firebase products you want to use in your app
+# For example, to use Firebase Authentication and Cloud Firestore
+pod 'Firebase/Auth'
+pod 'Firebase/Firestore'
+pod 'Firebase/Core'
+
 project 'Runner', {
   'Debug' => :debug,
   'Profile' => :release,
