--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.13.7
   auto_size_text: ^2.1.0
+  google_fonts: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
