--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cloud_firestore: ^0.13.7
   auto_size_text: ^2.1.0
   google_fonts: ^1.1.0
+  provider: ^4.3.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
